src/metrics/snapshots/big_code_analysis__metrics__cyclomatic__tests__tsx_logical_operators.snap
---
source: src/metrics/cyclomatic.rs
expression: metric.cyclomatic
---
{
  "sum": 4.0,
  "average": 4.0,
  "min": 1.0,
  "max": 3.0,
  "modified": {
    "sum": 4.0,
    "average": 4.0,
    "min": 1.0,
    "max": 3.0
  }
}
