src/metrics/snapshots/big_code_analysis__metrics__cyclomatic__tests__tsx_switch_modified.snap
---
source: src/metrics/cyclomatic.rs
expression: metric.cyclomatic
---
{
  "sum": 4.0,
  "average": 2.0,
  "min": 1.0,
  "max": 3.0,
  "modified": {
    "sum": 3.0,
    "average": 1.5,
    "min": 1.0,
    "max": 2.0
  }
}
