src/metrics/snapshots/big_code_analysis__metrics__cyclomatic__tests__typescript_while_loop.snap
---
source: src/metrics/cyclomatic.rs
expression: metric.cyclomatic
---
{
  "sum": 3,
  "average": 3.0,
  "min": 1,
  "max": 2,
  "modified": {
    "sum": 3,
    "average": 3.0,
    "min": 1,
    "max": 2
  }
}
